--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -124,6 +124,25 @@ year = "Stand 31.05.2015"
 	note = {http://projecteuclid.org/euclid.bams/1183492347}
 }
 
+@Book{temme,
+	author = {Nico M. Temme},
+	title = {Special Functions An Introduction to the Classical Functions of Mathematical Physics},
+	year = {1996},
+	publisher = {John Wiley \& Sons, Inc.},
+	isbn = {0-471-11313-1}
+}
+
+@book{tobias,
+  title={Foundations of modern auditory theory},
+  author={Tobias, J.V.},
+  number={Bd. 1},
+  lccn={78091432},
+  series={Foundations of Modern Auditory Theory},
+  year={1970},
+  publisher={Academic Press}
+}
+
+
 %Gary
 @book{stotz,
   title={Computergest{\"u}tzte Audio- und Videotechnik: Multimediatechnik in der Anwendung - 2. Aufl.},
